# sentidict

./: .coverage  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.markdown  advanced.html  allfiles.txt  datafiles.txt  detailed-example.html  genindex.html  getting-started.html  index.html  makefile  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sentidict.html  setup.py  test-wordshift-labMT.html  test-wordshift-linked-labMT.html  test-wordshift-linked-preshift-labMT.html  test-wordshift-preshift-labMT.html  unittest.cfg  wordshifts.html
.github/workflows/: ci.yml  docs.yml  pre-commit.yml  python-publish.yml  tests.yml
_modules/: index.html
_modules/sentidict/: dictionaries.html  utils.html
data/GI/: load-GI.py
data/NRC/MaxDiff-Twitter-Lexicon/: readme.txt
data/SOCAL/: SO-CAL Lexicon.PKL
data/SentiWordNet/: load_sentiWordNet.py
data/VADER/: vaderSentiment.py
data/WDAL/: load_wdal.py
docs/: Makefile  conf.py  index.rst
examples/: example-001.py  example-002.py
sentidict/: __init__.py  dictionaries.py  functions.py  utils.py  wordshifts.py
sentidict/data/AFINN/: load-afinn.py
sentidict/data/ANEW/: ANEW.TXT
sentidict/data/Brandwatch/: queries.txt
sentidict/data/EmoSenticNet/: emosenticnet.csv
sentidict/data/GI/: inqtabs.txt
sentidict/data/LabMT/: data  labMT2arabic.txt  labMT2french.txt  labMT2portuguese.txt  labMTwordsLonger.csv
sentidict/data/LabMT/data/: labMTwords-english.csv
sentidict/data/LabMT/translations/lists/: LabMT2_arabic.txt
sentidict/data/LabMT/vectors/: labMTscores-english.csv
sentidict/data/NRC/: load_NRC.py
sentidict/data/NRC/NRC-Emotion-Lexicon-v0.92/: NRC-emotion-lexicon-wordlevel-alphabetized-v0.92.txt  README.txt
sentidict/data/NRC/NRC-Hashtag-Sentiment-Lexicon-v0.1/: README.txt
sentidict/data/NRC/Sentiment140-Lexicon-v0.1/: README
sentidict/data/Pattern/: load_pattern.py
sentidict/data/SASA/sasa-0.1.3/: PKG-INFO  README.txt  setup.py
sentidict/data/SASA/sasa-0.1.3/sasa/: classifier.py  gflags.py  happyfuntokenizing.py  happyfuntokenizing_old.py  normalizer.py  sentiment.py  tokenizer_bak.py
sentidict/data/SOCAL/: README.txt  google_dict.txt  int_dictionary1.11.txt
sentidict/data/SentiStrength/: BoosterWordList.txt  EmotionLookupTable.txt  NegatingWordList.txt  QuestionWords.txt
sentidict/data/SentiWordNet/: load_sentiWordNet.py
sentidict/data/SenticNet/: aspect_extraction.xml  load.py  polarity_detection.xml  semantic_parsing.xml  senticnet.rdf.xml  senticnet3.json  topic_spotting.xml
sentidict/data/SenticNet/__MACOSX/: ._aspect_extraction.xml  ._polarity_detection.xml  ._publication_credit.txt  ._semantic_parsing.xml  ._senticnet.rdf.xml
sentidict/data/USent/SANN/: emoticons.data  subjclust.tff  wordNetDictList.txt
sentidict/data/Umigon/: 10_negations.txt  11_hints difficulty.txt  12_time indications.txt  13_hashtags.txt  14_false positive opinions.txt  16_moderators.txt  1_positive tone.txt  2_negative tone.txt  3_strength of opinion.txt  4_time.txt  5_question.txt  6_subjective.txt  7_call_to_action.txt  8_humor or light.txt  9_commercial tone.txt  all.txt
sentidict/data/WDAL/: DictionaryofAffect  words.txt
sentidict/data/WNA/: wn-affect-legenda-1.0.txt
sentidict/data/WNA/wordnet-1.6/: CHANGES  INSTALL  LICENSE  Makefile  README  README.tcltk
sentidict/data/WNA/wordnet-1.6/dict/: Makefile  data.adj  data.adv  data.verb  index.adj  index.adv  index.noun  index.verb  lexnames  sentidx.vrb  sents.vrb
sentidict/data/WNA/wordnet-1.6/include/: Makefile  setutil.h  wn.h  wntypes.h
sentidict/data/WNA/wordnet-1.6/lib/sunos/: Makefile
sentidict/data/WNA/wordnet-1.6/man/: Makefile  binsrch.3  cntlist.5  glossidx.5  lexnames.5  morph.3  morphy.7  senseidx.5  taglist.5  uniqbeg.7  wn.1  wnb.1  wndb.5  wngloss.7  wngroups.7  wninput.5  wnintro.1  wnintro.3  wnintro.5  wnintro.7  wnlicens.7  wnpkgs.7  wnsearch.3  wnstats.7  wnutil.3
sentidict/data/WNA/wordnet-1.6/man/html/: binsrch.htm  cntlist.htm  glossidx.htm  lexnames.htm  morph.htm  morphy.htm  senseidx.htm  taglist.htm  uniqbeg.htm  wn.htm  wnb.htm  wndb.htm  wngloss.htm  wngroups.htm  wninput.htm  wnintro1.htm  wnintro3.htm  wnintro5.htm  wnintro7.htm  wnlicens.htm  wnpkgs.htm  wnsearch.htm  wnstats.htm  wnutil.htm
sentidict/data/WNA/wordnet-1.6/man/ps/: binsrch.3ps  cntlist.5ps  glossidx.5ps  lexnames.5ps  morph.3ps  morphy.7ps  senseidx.5ps  taglist.5ps  uniqbeg.7ps  wn.1ps  wnb.1ps  wndb.5ps  wngloss.7ps  wngroups.7ps  wninput.5ps  wnintro.1ps  wnintro.3ps  wnintro.5ps  wnintro.7ps  wnlicens.7ps  wnpkgs.7ps  wnsearch.3ps  wnstats.7ps  wnutil.3ps
sentidict/data/WNA/wordnet-1.6/src/: Makefile
sentidict/data/WNA/wordnet-1.6/src/include/: Makefile  license.h  wnconsts.h  wnrtl.h
sentidict/data/WNA/wordnet-1.6/src/lib/: Makefile  binsrch.c  morph.c  search.c  setutil.c  wnhelp.c  wnrtl.c  wnutil.c
sentidict/data/WNA/wordnet-1.6/src/lib/wnres/: Makefile
sentidict/data/WNA/wordnet-1.6/src/wn/: Makefile  wn.c
sentidict/data/WNA/wordnet-1.6/src/wnb/: Makefile  stubs.c  tkAppInit.c
sentidict/data/wordnet/: README
sentidict/static/: hedotools.shifter.js
sentidict/templates/: descriptions.tex.jinja2  js-include-require.j2  jsincludes.jinja2  template-full.html.jinja2  template-preshifted.html  template-preshifted.html.jinja2  template.html.jinja2  wordshift-base.html  wrapper-include.html.jinja2  wrapper.html  wrapper.html.jinja2
static/: d3.min.js  hedotools.min.js  hedotools.shift.css  jquery.min.js
test/: local-vs-require.ipynb  test-wordshift.ipynb  test.py
test/.ipynb_checkpoints/: local-vs-require-checkpoint.ipynb  test-wordshift-checkpoint.ipynb
