[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[project]
name = "sentidict"
dynamic = ["version"]
description = "Utilities for dictionary-based sentiment analysis. Includes 28 sentiment dictionaries with loaders, scoring, and interactive visualization."
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.9"
authors = [
    {name = "Andy Reagan", email = "andy@andyreagan.com"}
]
keywords = ["sentiment", "emotion", "nlp", "text-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "marisa_trie",
    "numpy",
    "jinja2",
]

[project.urls]
Documentation = "https://sentidict.readthedocs.io/"
Repository = "https://github.com/andyreagan/sentidict"
Issues = "https://github.com/andyreagan/sentidict/issues"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
skip-string-normalization = true
exclude = "sentidict/data/.*"

[tool.hatch.version]
path = "sentidict/__init__.py"
pattern = "__version__ = [\"'\"](?P<version>.+)[\"'\"]"

[tool.hatch.build.targets.wheel]
packages = ["sentidict"]

[tool.hatch.build.targets.wheel.forced-include]
"sentidict/static" = "sentidict/static"
"sentidict/templates" = "sentidict/templates"
"sentidict/data/LabMT/labMT2english.txt" = "sentidict/data/LabMT/labMT2english.txt"
"sentidict/data/ANEW/all-2.csv" = "sentidict/data/ANEW/all-2.csv"
"sentidict/data/MPQA/subjectivity_clues_hltemnlp05/subjclueslen1-HLTEMNLP05.tff" = "sentidict/data/MPQA/subjectivity_clues_hltemnlp05/subjclueslen1-HLTEMNLP05.tff"
"sentidict/data/OL/negative-words.txt" = "sentidict/data/OL/negative-words.txt"
"sentidict/data/OL/positive-words.txt" = "sentidict/data/OL/positive-words.txt"
"sentidict/data/WK/BRM-emot-submit.csv" = "sentidict/data/WK/BRM-emot-submit.csv"
"sentidict/data/PANAS-X/affect.txt" = "sentidict/data/PANAS-X/affect.txt"
"sentidict/data/SentiWordNet/SentiWordNet_3.0.0_20130122.txt" = "sentidict/data/SentiWordNet/SentiWordNet_3.0.0_20130122.txt"
"sentidict/data/AFINN/AFINN-111.txt" = "sentidict/data/AFINN/AFINN-111.txt"
"sentidict/data/GI/inqtabs.txt" = "sentidict/data/GI/inqtabs.txt"
"sentidict/data/WDAL/words.txt" = "sentidict/data/WDAL/words.txt"
"sentidict/data/NRC/NRC-Emotion-Lexicon-v0.92/NRC-emotion-lexicon-wordlevel-alphabetized-v0.92.txt" = "sentidict/data/NRC/NRC-Emotion-Lexicon-v0.92/NRC-emotion-lexicon-wordlevel-alphabetized-v0.92.txt"
"sentidict/data/NRC/MaxDiff-Twitter-Lexicon/Maxdiff-Twitter-Lexicon_-1to1.txt" = "sentidict/data/NRC/MaxDiff-Twitter-Lexicon/Maxdiff-Twitter-Lexicon_-1to1.txt"
"sentidict/data/NRC/NRC-Hashtag-Sentiment-Lexicon-v0.1/unigrams-pmilexicon.txt" = "sentidict/data/NRC/NRC-Hashtag-Sentiment-Lexicon-v0.1/unigrams-pmilexicon.txt"
"sentidict/data/NRC/Sentiment140-Lexicon-v0.1/unigrams-pmilexicon.txt" = "sentidict/data/NRC/Sentiment140-Lexicon-v0.1/unigrams-pmilexicon.txt"
"sentidict/data/NRC/Sentiment140-Lexicon-v0.1/bigrams-pmilexicon.txt" = "sentidict/data/NRC/Sentiment140-Lexicon-v0.1/bigrams-pmilexicon.txt"
"sentidict/data/NRC/Sentiment140-Lexicon-v0.1/pairs-pmilexicon.txt" = "sentidict/data/NRC/Sentiment140-Lexicon-v0.1/pairs-pmilexicon.txt"
"sentidict/data/SOCAL/all_dictionaries-utf8.txt" = "sentidict/data/SOCAL/all_dictionaries-utf8.txt"
"sentidict/data/SenticNet/senticnet3.rdf.xml" = "sentidict/data/SenticNet/senticnet3.rdf.xml"
"sentidict/data/SenticNet/senticnet3.json" = "sentidict/data/SenticNet/senticnet3.json"
"sentidict/data/Emoticons/positive.txt" = "sentidict/data/Emoticons/positive.txt"
"sentidict/data/Emoticons/neutral.txt" = "sentidict/data/Emoticons/neutral.txt"
"sentidict/data/Emoticons/negative.txt" = "sentidict/data/Emoticons/negative.txt"
"sentidict/data/SentiStrength/EmotionLookupTable.txt" = "sentidict/data/SentiStrength/EmotionLookupTable.txt"
"sentidict/data/SentiStrength/EmoticonLookupTable-utf8.txt" = "sentidict/data/SentiStrength/EmoticonLookupTable-utf8.txt"
"sentidict/data/VADER/vader_sentiment_lexicon-utf8.txt" = "sentidict/data/VADER/vader_sentiment_lexicon-utf8.txt"
"sentidict/data/Umigon/all.txt" = "sentidict/data/Umigon/all.txt"
"sentidict/data/USent/SANN/positive.txt" = "sentidict/data/USent/SANN/positive.txt"
"sentidict/data/USent/SANN/negative.txt" = "sentidict/data/USent/SANN/negative.txt"
"sentidict/data/EmoSenticNet/emosenticnet.csv" = "sentidict/data/EmoSenticNet/emosenticnet.csv"

[project.optional-dependencies]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]

test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "scipy",
    "jupyter",
]

dev = [
    "black>=22.1.0",
    "isort>=5.10.1",
    "flake8>=4.0.1",
    "ipython",
    "twine",
]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test.py", "test_*.py"]
python_functions = ["test*"]

[tool.hatch.envs.docs]
dependencies = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]

[tool.hatch.envs.docs.scripts]
build = "cd docs && make html"
clean = "cd docs && make clean"
serve = "python -m http.server -d docs/_build/html 8000"
